test/Parsing/err-column-number.fab
#
# RUN: fab --print-dag --format=null %s 2> %t || true
# RUN: FileCheck %s -input-file %t
#

# CHECK: {{.*}}.fab:7:5: error: syntax error
le$x = action('$LEX -c++ --header-file=$header --outfile=$out $in')
